# template-python

./: JUSTFILE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
